# The-Pet-Mischief-Detector

./: .gitignore  CLAUDE.md  README.md  depth_size_fix.md  main.py  pyproject.toml
docs/: Finetune_yolo.md  Project_Report_21097305d_HEO_Sunghak.md  contribution.md  depth_size_fix.md  experiment_step_v3.md  experiment_step_v4.md  finetuning_plan.md  gnn_temporal_summary.md  hybrid_cnn_gnn_advanced_plan.md  hybrid_cnn_gnn_summary.md
model/: Qwen3.5labeling.py  detector.py  florenceAutolabeling.py  mischief.py  visualize.py
model/runs/baseline/: args.yaml
model/runs/dry_run/: args.yaml
model/runs/dry_run_mps/: args.yaml
model/runs/exp_a/: args.yaml
models/: __init__.py  detector.py  mischief.py  visualize.py
models/gnn/: __init__.py  dataset.py  graph_builder.py  inference.py  model.py  train.py
models/hybrid/: __init__.py  backbone.py  dataset.py  graph_builder.py  inference.py  model.py  roi_pool.py  train.py
outputs/: risk_eval_yolo11n.csv  risk_eval_yolo26s.csv
schema/: Data.py  __init__.py  dataset.yaml
scripts/: 01_curate_coco.py  02_split_dataset.py  03_train.py  04_evaluate.py  05_mischief_eval.py  06_eval_risk_labels.py  06_train_gnn.py  07_train_hybrid.py  GroundDinoSAMQwen2.5.py  ground_truth_labeling.py
